--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "precss": "^3.1.2",
     "sass": "^1.10.3",
     "sass-loader": "^7.1.0",
+    "scrollmagic": "^2.0.6",
     "style-loader": "^0.21.0",
     "uikit": "^3.0.0-rc.11",
     "webpack": "^4.16.5",
