--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.28.11",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
+    "gsap": "^2.1.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.3",
