--- a/package.json
+++ b/package.json
@@ -20,26 +20,27 @@
     "css-loader": "^0.28.11",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
-    "gsap": "^2.1.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "imports-loader": "^0.8.0",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
-    "npm": "^6.4.1",
+    "npm": "^6.10.3",
     "postcss": "^6.0.21",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.3",
     "precss": "^3.1.2",
     "sass": "^1.10.3",
     "sass-loader": "^7.1.0",
-    "scrollmagic": "^2.0.6",
     "style-loader": "^0.21.0",
     "uikit": "^3.0.0-rc.11",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.7.2"
   },
   "devDependencies": {
-    "eslint": "^5.0.1"
+    "eslint": "^5.0.1",
+    "gsap": "^2.1.3",
+    "scrollmagic": "^2.0.7",
+    "webpack": "^4.39.3"
   }
 }
